crates/cuda-macros/tests/compile_fail/policy_config_zero_threads.stderr
error[E0080]: evaluation panicked: launch_bounds maximum threads must be greater than zero
 --> $WORKSPACE/crates/cuda-device/src/thread.rs
  |
  |     const { validate_launch_bounds(MAX_THREADS) }
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `cuda_device::__launch_bounds_config::<0, 0>::{constant#0}` failed inside this call
  |
note: inside `cuda_device::thread::validate_launch_bounds`
 --> $RUST/core/src/panic.rs
  |
  |           $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
  |
 ::: $WORKSPACE/crates/cuda-device/src/thread.rs
  |
  | /     assert!(
  | |         max_threads > 0,
  | |         "launch_bounds maximum threads must be greater than zero"
  | |     );
  | |_____- in this macro invocation

note: erroneous constant encountered
 --> $WORKSPACE/crates/cuda-device/src/thread.rs
  |
  |     const { validate_launch_bounds(MAX_THREADS) }
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn __launch_bounds_config::<0, 0>`
  --> tests/compile_fail/policy_config_zero_threads.rs:13:1
   |
13 | #[launch_bounds(Invalid::MAX_THREADS)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this note originates in the attribute macro `launch_bounds` (in Nightly builds, run with -Z macro-backtrace for more info)
